Fix navbar-collapse issue & update angular-cli.json

--- a/src/app/bs-navbar/bs-navbar.component.css
+++ b/src/app/bs-navbar/bs-navbar.component.css
@@ -1,10 +1,7 @@
 .dropdown-toggle {
     cursor: pointer;
-    /* background-color: palegoldenrod; */
 }
 
-
-/* 
-.navbar-toggler:not(:disabled):not(.disabled) {
+.navbar-toggler {
     cursor: pointer;
-} */
+}
